--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,10 @@
     "require": {
         "php": ">=5.6",
         "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "vlucas/phpdotenv": "^3.0.0",
-        "oscarotero/env": "^1.1.0",
         "slim/twig-view": "^2.4",
         "illuminate/database": "^5.6",
-        "respect/validation": "^1.1",
-        "slim/csrf": "^0.8.2",
-        "slim/flash": "^0.4.0"
+        "respect/validation": "^1.1"
     },
     "autoload": {
         "psr-4": {
